--- a/PA2.Rmd
+++ b/PA2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "RepResearch_PeerAssessment2"
+title: "Reproducible Research Peer Assessment 2"
 author: "Ray Lugo, Jr."
 date: "February 17, 2017"
 output: html_document
@@ -10,6 +10,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ##Synopsis: Immediately after the title, there should be a synopsis which describes and summarizes your analysis in at most 10 complete sentences.
+
+##Environment Prep and Session Report
+
+library(tidyverse)
+library(reshape2)
+library(data.table)
+library(stringi)
+
+sessionInfo()
 
 ##Data Processing which describes (in words and code) how the data were loaded into R and processed for analysis. In particular, your analysis must start from the raw CSV file containing the data. You cannot do any preprocessing outside the document. If preprocessing is time-consuming you may consider using the cache = TRUE option for certain code chunks.
 
