--- a/PA2.Rmd
+++ b/PA2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducible Research \n Peer Assessment 2"
+title: "An Analysis of Severe Weather and Climate Events between 1950-2011 and the Identification of those which Incurred the Most Human and Economic Losses."
 author: "Ray Lugo, Jr."
 date: "February 17, 2017"
 output: 
@@ -15,38 +15,52 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-###Synopsis
-The NOAA Storm database contains observations of weather events across the United States.  The subset used in this report include observations, at the individual State level, from 1950 - 2011.  The purpose of this analysis is to determine the weather events which cause the highest number of casualties (injury and death) to the human population as well as the most damage caused to property and crops in terms of estimated cost to repair or replace.
+```{r results="asis", echo=FALSE, message=FALSE, warning=FALSE}
+printTable <- function(dfTable, hasDate = FALSE, printCaption = ""){
+        print_table <- as.data.frame(dfTable)
+    if (hasDate) {
+        print_table$date <- as.character(print_table$date)
+    }
+    printObj <<- xtable(print_table[1:10,], caption = printCaption)
+    rm(print_table) #cleanup
+}
+```
 
-During analysis, we have determined that the data required normalization, as there was substantial variance in the categorization of the Events themselves which would lead to error.
-As a result of the analysis, we have learned that the highest human toll comes from Tornados and Flash Floods and the most property damage comes from Flash Floods and Thunderstorms. On average, Tornados cause 685.47 casualties, Thunderstorms cause \$68,992.79K in damage and Flash Floods cause 412.84 casualties and $84,480K in property and crop damage. 
+##Synopsis
+The  [U.S. National Oceanic and Atmospheric Administration](https://www.ncdc.noaa.gov/climate-information/extreme-events) (NOAA) Storm database contains observations of weather events across the United States.  The dataset used in this report includes observations of weather events from 1950 - 2011.  The purpose of this analysis is to determine the weather events which cause the highest number of casualties (injury and death) to the human population as well as the most damage caused to property and crops in terms of estimated cost of the loss, repair or replacement.
 
-### Source Data File
+During exploratory analysis, we have determined that the data required further processing to acheive normalization, as there was substantial variance found in the categorization of the Events themselves which could lead to inaccuracy. Steps were taken to eliminate the variance where necessary and mitigate risk. 
+
+As a result of the analysis, we have learned that the highest human toll is attributed to **Tornados** and **Flash Floods** and the most property damage is caused by **Flash Floods** and **Thunderstorms**.  Although Tornados were highest on the list for causing  casualties, *Flash Floods were present in both sets of lists and are a simultaneous threat to both life and property on a large scale*.  On average for each occurance, Tornados cause 685.47 casualties and \$38,023K in damage and Flash Floods cause 412.84 casualties and $84,480K in property and crop damage.  Tornados have a steady number of occurrences since 1993 but Flash Floods have seen a steady increase in the time frame measured.  Both events are dangerous and costly, therefore both should be monitored closely.
+
+## Source Data File
 
 The [NOAA source data file]("http://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2") used for this analysis contains 95,657 observations that range from 1950 - 2011, saved in a comma separated value file.  Each observation contains details on the weather event, fatalities, injuries, property and crop damage (where applicable), and further information on where the event leading to this damage transpired.  It contains a "comments" type field which contains unstructured text and which accounts for a large portion of the data files decompressed size of over 500MB.
 
-###Environment Prep and Session Report
+##Environment Prep and Session Report
 The R packages used for this analysis include *Tidyverse (dplyr, ggplot2, etc.), reshape2, data.table, stringi and gridExtra*.    Please refer to the included session information which provides details on the versions of each package.  For this session, the  scientific notation option has been disabled in order to display monetary values.
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(reshape2)
 library(data.table)
 library(stringi)
 library(gridExtra)
+library(knitr)
+library(xtable)
 
 options(scipen = 999)
+```
 
+```{r}
 sessionInfo()
 ```
 
+## Data Loading
+Due to the number of records and the size of the data file, "fread" was chosen for its data ingestion speed which minimizes the time needed to populate the data table.  Initial data loading finishes in under 40 secs with subsequent loads completing in under 3 secs on average.
 
-### Data Loading
-Due to the number of records and the size of the data file, "fread" was chosen for data loading to increase the speed of data ingestion and minimize the time needed to populate the resulting data table.  Initial data loading takes about 40 secs with subsequent loads completing in under 3 secs on average.
+Using "fread", we optimised speed and use of space by specifying the data fields to be imported from the CSV file prior to starting the process and this prevented the need to import extaneous fields such as the comments which are not required for this analysis.  The BGN_DATE field contains a date stored in the format "YYYYMMDD".  For the purpose of this analysis we converted that data into an actual "Date" field and also created a new field which holds only the "YEAR" part of each BGN_DATE.
 
-Using "fread" provided the ability to specify the fields from the CSV file that will be imported and therefore prevents the need to store the comments and any other fields which are not required for this analysis.  The BGN_DATE field contains a date stored as characters and in the format "YYYYMMDD".  For the purpose of this analysis we converted that data into an actual "Date" field and also created a new field which holds only the "YEAR" part of each BGN_DATE.
-
-The EVTYPE (Event Type) field contains "Event"" categories but it seems that the reporting was inconsistent and created variance in the catagory values themselves.  The values for the most significant event types were normalized in order to ensure that the results of each calculations is based on complete and accurate subsets of data.  This required several iterations until the target events were determined and the event values were corrected.
 
 ```{r cache = TRUE}
 data_dir <- paste0(getwd(),"/data")
@@ -74,7 +88,13 @@ stormData <- fread(file = csvStormData, sep = ",", header = T, select = keepCols
 stormData$BGN_DATE <- as.Date(stormData$BGN_DATE,"%m/%d/%Y")
 #create YEAR field from BGN_DATE
 stormData$YEAR <- year(stormData$BGN_DATE)
+```
 
+The EVTYPE (Event Type) field contains "Event"" categories but it seems that the reporting was inconsistent and created variance in the catagory values themselves.  The values for the most significant event types were normalized in order to ensure that the results of each calculations is based on complete and accurate subsets of data.  This required several iterations until the "target" events were identified and the event values were corrected.
+
+During the exploratory analysis phase, a time series plot of the events with the highest number of casualties revealed that only two events were being reported initially and that the constant number of events recorded began around 1993.  All plots and results are then based off of the subset of data from 1993 - 2011, in order to minimize outliers and to provide a comparison where all events have an equal number of years worth of observations for 1:1 comparisons.
+
+```{r}
 #cleanup pertinent EVTYPE variants using regexes before analysis for more accuracy
 stormData$EVTYPE <- stri_replace(stormData$EVTYPE, "THUNDERSTORM", regex = "(.)*?(A-Z)?T\\w+\\sWIN(D)?(S)?\\D?(.*)?")
 stormData$EVTYPE <- stri_replace(stormData$EVTYPE, "THUNDERSTORM", regex = "(.*)THUNDERSTORM(.*)")
@@ -87,10 +107,11 @@ stormData$EVTYPE <- stri_replace(stormData$EVTYPE, "TROPICAL STORM", regex = "(.
 
 ```
 
-###Analysis
-During the analysis a time series plot of the events with the highest number of casualties revealed that only two events were being reported initially and that the constant number of events recorded began around 1993.  All plots and results are then based off of the subset of data from 1993 - 2011, in order to minimize outliers and to provide a comparison where all events have an equal number of years worth of observations for 1:1 comparisons.
+##Results
 
+####Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
 
+From 1993-2011, Tornados were responsible for 25K casualties, followed by Extreme Heat with 12.3K and Flash Flooding with 10.1K.
 
 ```{r}
 #The majority of data reporting for all EVTYPES starts around 1993.
@@ -106,9 +127,6 @@ population_health_1993 <- stormData %>%
 
 
 ```
-##Results in which your results are presented.
-
-###Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
 
 ```{r}
 top_5_pop_events <- melt(population_health_1993[1:5,],id.vars = "EVTYPE")
@@ -119,14 +137,16 @@ bar_population_health_Top_5 <- ggplot(top_5_pop_events, aes(x = reorder(EVTYPE, 
     geom_text(size = 3, color = "white", position = position_stack(vjust = 0.5)) +
     scale_y_sqrt() +
     facet_grid(.~variable) +
-    scale_fill_manual(values = c("firebrick","steelblue","black"), labels = c("Fatalities", "Injuries", "Casualties")) +
+    scale_fill_manual(values = c("firebrick","steelblue","black"), labels = c("Fatalities", "Injuries", "TOTAL CASUALTIES")) +
     theme(axis.text.x = element_text(angle = 45, size = 6, hjust = 1)) +
     labs(main = "Top 5 Events with Highest Casualties 1993 - 2011", x = "Event", y = "Total Casualties in Thousands (Log sqrt)")
 
 bar_population_health_Top_5
 ```
 
-###Across the United States, which types of events have the greatest economic consequences?
+####Across the United States, which types of events have the greatest economic consequences?
+
+Flash Floods caused an estimated \$157.6B in damage to property and crops, followed by Hurricanes with S44.3B and Tornados with $16.5B.
 
 ```{r}
 #Question 2
@@ -167,7 +187,7 @@ bar_Cost_Top_5 <- ggplot(top_5_cost_events, aes(x = reorder(EVTYPE, value), y = 
     geom_text(size = 3, color = "white", position = position_stack(vjust = 0.5)) +
     scale_y_sqrt() +
     facet_grid(.~variable) +
-    scale_fill_manual(values = c("darkgreen","brown","black"), labels = c("Property", "Crop", "Total")) +
+    scale_fill_manual(values = c("darkgreen","brown","black"), labels = c("Property", "Crop", "Total COST")) +
     theme(axis.text.x = element_text(angle = 45, size = 6, hjust = 1)) +
     labs(title = "Top 5 Events with Highest Costs 1993 - 2011", x = "Event", y = "Cost in Billions (Log sqrt)")
 
@@ -177,6 +197,8 @@ bar_Cost_Top_5
 
 
 ##Future Events Trend and Estimated Damage
+
+Thunderstorms have seen a large increase between 1993 and 2011 however their cost per incident is not as high as those attributed to Flash Floods and Tornados.  Tornados occurances have been steady but the trends show that Flash Flooding occurances have been increasing and this poses a great risk as each occurance brings a high human and economic cost.
 
 
 ```{r}
@@ -194,7 +216,8 @@ topEventsCountData$EVTYPE <- factor(topEventsCountData$EVTYPE)
 #plot number of each event per year
 plot_num_events_per_year <- ggplot(topEventsCountData, aes(x = YEAR, y = event_count, fill = EVTYPE, color = EVTYPE)) +
     geom_line(lwd = 1) +
-    geom_smooth(method = "lm", se = F, linetype = 2)
+    geom_smooth(method = "lm", se = F, linetype = 2) +
+    labs(y = "Occurences")
 
 
 topEventsMeanEffectsData <- stormData %>%
@@ -214,24 +237,11 @@ topEventsMeanEffectsData <- topEventsMeanEffectsData %>%
 plot_effects_scatter <- ggplot(topEventsMeanEffectsData, aes(x = CASUALTIES, y = COST, fill = EVTYPE)) +
     geom_point(aes(color = EVTYPE, shape = EVTYPE)) +
     scale_x_log10()
-
-grid.arrange(plot_num_events_per_year,plot_effects_scatter, nrow  = 2)
-
-
-topEventsReport <- topEventsMeanEffectsData %>%
-    group_by(EVTYPE) %>%
-    summarize(FATALITIES = mean(FATALITIES), INJURIES = mean(INJURIES), CASUALTIES = mean(FATALITIES + INJURIES), PROPDMG = mean(PROPDMG), CROPDMG = mean(CROPDMG), COST = sum(PROPDMG + CROPDMG)) %>%
-    select(EVTYPE, CASUALTIES,COST) %>%
-    arrange(desc(CASUALTIES),desc(COST))
-
-
-topEventsReport[1,]
-
-topEventsReport[2,]
-
 ```
 
-
+```{r message=FALSE, warning=FALSE, results="asis"}
+grid.arrange(plot_num_events_per_year,plot_effects_scatter, nrow  = 2)
+```
 
 ```{r}
 options(scipen = 0)
